--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.35.0",
     "react-image-crop": "^10.0.9",
     "react-redux": "^8.0.2",
+    "react-window": "^1.8.8",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
     "sass": "^1.54.9"
@@ -29,6 +30,7 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-window": "^1.8.5",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
